# lkml2cube

./: .gitignore  .pydoc-markdown.yml  CLAUDE.md  LICENSE  README.md  export_pdm.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  run_tests.yml
docs/: lkml2cube_converter.md  lkml2cube_main.md  lkml2cube_parser.md  lkml2cube_parser_cube_api.md  lkml2cube_parser_explores.md  lkml2cube_parser_loader.md  lkml2cube_parser_types.md  lkml2cube_parser_views.md
lkml2cube/: converter.py  main.py
lkml2cube/parser/: cube_api.py  explores.py  loader.py  types.py  views.py
lkml2cube/tests/: e2e.py
lkml2cube/tests/samples/cubeml/: orders.yml
scripts/: generate_docs.py
tests/: test_constants.py  test_converter.py  test_e2e.py  test_explores_command.py  test_lookml_writer.py
tests/samples/cubeml/: orders.yml
tests/samples/lkml/: constants_test.lkml
tests/samples/lkml/explores/: orders_summary.model.lkml
tests/samples/lkml/views/: line_items.view.lkml  orders.view.lkml  products.view.lkml
