
[project]
name = "lkml2cube"
version = "0.2.0"
description = "Looker ML to Cube converter"
authors = [
    {name = "Paco Valdez", email = "paco@cube.dev"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "lkml>=1.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
lkml2cube = "lkml2cube.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
